Fixed vertical alignment issues (#836)

--- a/src/app/pages/view-test-result/components/faults-data-row/faults-data-row.scss
+++ b/src/app/pages/view-test-result/components/faults-data-row/faults-data-row.scss
@@ -3,6 +3,6 @@
     font-weight: bold;
   }
   .badge-container {
-    padding-top: 5px;
+    padding-top: 8px;
   }
 }
